--- a/resources/windows/wix/service.puppet.wxs.erb
+++ b/resources/windows/wix/service.puppet.wxs.erb
@@ -13,7 +13,7 @@
         </Condition>
         <File Id="RubyExeAutomatic"
               KeyPath="yes"
-              Source="SourceDir\<%= settings[:base_dir] %>\<%= settings[:company_id] %>\<%= settings[:product_id] %>\puppet\bin\ruby.exe" />
+              Source="SourceDir\<%= settings[:base_dir] %>\<%= settings[:company_id] %>\<%= settings[:product_id] %>\sys\ruby\bin\ruby.exe" />
 
         <ServiceInstall Id="ServiceInstaller"
                         Account="[PUPPET_AGENT_ACCOUNT_DOMAIN]\[PUPPET_AGENT_ACCOUNT_USER]"
@@ -26,7 +26,7 @@
                         Type="ownProcess"
                         ErrorControl="normal"
                         Vital="yes"
-                        Arguments="-rubygems &quot;[INSTALLDIR]puppet\bin\daemon.rb&quot;" />
+                        Arguments="-rubygems &quot;[INSTALLDIR]service\daemon.rb&quot;" />
         <ServiceControl Id="ServiceControlOptions"
                         Start="install"
                         Stop="both"
@@ -44,7 +44,7 @@
         </Condition>
         <File Id="RubyExeManual"
               KeyPath="yes"
-              Source="SourceDir\<%= settings[:base_dir] %>\<%= settings[:company_id] %>\<%= settings[:product_id] %>\puppet\bin\ruby.exe" />
+              Source="SourceDir\<%= settings[:base_dir] %>\<%= settings[:company_id] %>\<%= settings[:product_id] %>\sys\ruby\bin\ruby.exe" />
 
         <ServiceInstall Id="ServiceInstallerManual"
                         Account="[PUPPET_AGENT_ACCOUNT_DOMAIN]\[PUPPET_AGENT_ACCOUNT_USER]"
@@ -57,7 +57,7 @@
                         Type="ownProcess"
                         ErrorControl="normal"
                         Vital="yes"
-                        Arguments="-rubygems &quot;[INSTALLDIR]puppet\bin\daemon.rb&quot;" />
+                        Arguments="-rubygems &quot;[INSTALLDIR]service\daemon.rb&quot;" />
         <ServiceControl Id="ServiceControlOptionsManual"
                         Stop="both"
                         Remove="uninstall"
@@ -74,7 +74,7 @@
         </Condition>
         <File Id="RubyExeDisabled"
               KeyPath="yes"
-              Source="SourceDir\<%= settings[:base_dir] %>\<%= settings[:company_id] %>\<%= settings[:product_id] %>\puppet\bin\ruby.exe" />
+              Source="SourceDir\<%= settings[:base_dir] %>\<%= settings[:company_id] %>\<%= settings[:product_id] %>\sys\ruby\bin\ruby.exe" />
 
         <ServiceInstall Id="ServiceInstallerDisabled"
                         Account="[PUPPET_AGENT_ACCOUNT_DOMAIN]\[PUPPET_AGENT_ACCOUNT_USER]"
@@ -87,7 +87,7 @@
                         Type="ownProcess"
                         ErrorControl="normal"
                         Vital="yes"
-                        Arguments="-rubygems &quot;[INSTALLDIR]puppet\bin\daemon.rb&quot;" />
+                        Arguments="-rubygems &quot;[INSTALLDIR]service\daemon.rb&quot;" />
         <ServiceControl Id="ServiceControlOptionsDisabled"
                         Stop="both"
                         Remove="uninstall"
