--- a/resources/windows/wix/service.pxp-agent.wxs.erb
+++ b/resources/windows/wix/service.pxp-agent.wxs.erb
@@ -9,7 +9,7 @@
         <CreateFolder />
         <File Id="NSSM"
               KeyPath="yes"
-              Source="SourceDir\<%= settings[:base_dir] %>\<%= settings[:company_id] %>\<%= settings[:product_id] %>\puppet\bin\nssm.exe" />
+              Source="SourceDir\<%= settings[:base_dir] %>\<%= settings[:company_id] %>\<%= settings[:product_id] %>\service\nssm.exe" />
 
         <ServiceInstall Id="PXPServiceInstaller"
                         Account="[PUPPET_AGENT_ACCOUNT_DOMAIN]\[PUPPET_AGENT_ACCOUNT_USER]"
@@ -25,16 +25,16 @@
         <!-- Various registry keys documented at https://nssm.cc/usage -->
         <RegistryKey Root="HKLM" Key="SYSTEM\CurrentControlSet\Services\pxp-agent\Parameters">
           <RegistryValue Name="AppDirectory"
-                         Value="[INSTALLDIR]puppet\bin"
+                         Value="[INSTALLDIR]pxp-agent\bin"
                          Type="expandable" />
           <RegistryValue Name="Application"
-                         Value="[INSTALLDIR]puppet\bin\pxp-agent.exe"
+                         Value="[INSTALLDIR]pxp-agent\bin\pxp-agent.exe"
                          Type="expandable" />
           <RegistryValue Name="AppParameters"
                          Value=""
                          Type="expandable" />
           <RegistryValue Name="AppEnvironmentExtra"
-                         Value="PATH=[INSTALLDIR]puppet\bin;%PATH%"
+                         Value="PATH=[INSTALLDIR]pxp-agent\bin;%PATH%"
                          Type="multiString"
                          Action="append" />
           <!-- Skip responding to WM_QUIT and WM_CLOSE -->
