--- a/resources/windows/wix/ui/WixUI_PuppetInstallDir.wxs
+++ b/resources/windows/wix/ui/WixUI_PuppetInstallDir.wxs
@@ -14,7 +14,6 @@
 <!--
 First-time install dialog sequence:
  - WixUI_PuppetWelcomeDlg
- - WixUI_PuppetWarningDlg (applicable to 2003)
  - WixUI_PuppetLicenseAgreementDlg
  - WixUI_PuppetInstallDirDlg
  - WixUI_VerifyReadyDlg
@@ -28,7 +27,6 @@ Maintenance dialog sequence:
 
 Patch dialog sequence:
  - WixUI_PuppetWelcomeDlg
- - WixUI_PuppetWarningDlg (applicable to 2003)
  - WixUI_VerifyReadyDlg
 
 -->
@@ -61,16 +59,11 @@ Patch dialog sequence:
 
       <Publish Dialog="ExitDialog" Control="Finish" Event="EndDialog" Value="Return" Order="999">1</Publish>
 
-      <Publish Dialog="PuppetWelcomeDlg" Control="Next" Event="NewDialog" Value="PuppetLicenseAgreementDlg"><![CDATA[VersionNT >= 600 AND NOT Installed]]></Publish>
-      <Publish Dialog="PuppetWelcomeDlg" Control="Next" Event="NewDialog" Value="VerifyReadyDlg"><![CDATA[VersionNT >= 600 AND Installed AND PATCH]]></Publish>
-      <Publish Dialog="PuppetWelcomeDlg" Control="Next" Event="NewDialog" Value="PuppetWarningDlg"><![CDATA[VersionNT < 600]]></Publish>
+      <Publish Dialog="PuppetWelcomeDlg" Control="Next" Event="NewDialog" Value="PuppetLicenseAgreementDlg"><![CDATA[NOT Installed]]></Publish>
+      <Publish Dialog="PuppetWelcomeDlg" Control="Next" Event="NewDialog" Value="VerifyReadyDlg"><![CDATA[Installed AND PATCH]]></Publish>
 
-      <Publish Dialog="PuppetLicenseAgreementDlg" Control="Back" Event="NewDialog" Value="PuppetWelcomeDlg"><![CDATA[VersionNT >= 600]]></Publish>
-      <Publish Dialog="PuppetLicenseAgreementDlg" Control="Back" Event="NewDialog" Value="PuppetWarningDlg"><![CDATA[VersionNT < 600]]></Publish>
+      <Publish Dialog="PuppetLicenseAgreementDlg" Control="Back" Event="NewDialog" Value="PuppetWelcomeDlg"></Publish>
       <Publish Dialog="PuppetLicenseAgreementDlg" Control="Next" Event="NewDialog" Value="PuppetInstallDirDlg">LicenseAccepted = "1"</Publish>
-
-      <Publish Dialog="PuppetWarningDlg" Control="Next" Event="NewDialog" Value="PuppetLicenseAgreementDlg">NOT Installed</Publish>
-      <Publish Dialog="PuppetWarningDlg" Control="Next" Event="NewDialog" Value="VerifyReadyDlg">Installed AND PATCH</Publish>
 
       <Publish Dialog="PuppetInstallDirDlg" Control="Back" Event="NewDialog" Value="PuppetLicenseAgreementDlg">1</Publish>
       <Publish Dialog="PuppetInstallDirDlg" Control="Next" Event="SetTargetPath" Value="[WIXUI_INSTALLDIR]" Order="1">1</Publish>
@@ -82,8 +75,7 @@ Patch dialog sequence:
 
       <Publish Dialog="VerifyReadyDlg" Control="Back" Event="NewDialog" Value="PuppetInstallDirDlg" Order="1">NOT Installed</Publish>
       <Publish Dialog="VerifyReadyDlg" Control="Back" Event="NewDialog" Value="MaintenanceTypeDlg" Order="2">Installed AND NOT PATCH</Publish>
-      <Publish Dialog="VerifyReadyDlg" Control="Back" Event="NewDialog" Value="PuppetWelcomeDlg" Order="2"><![CDATA[VersionNT >= 600 AND Installed AND PATCH]]></Publish>
-      <Publish Dialog="VerifyReadyDlg" Control="Back" Event="NewDialog" Value="PuppetWarningDlg" Order="2"><![CDATA[VersionNT < 600 AND Installed AND PATCH]]></Publish>
+      <Publish Dialog="VerifyReadyDlg" Control="Back" Event="NewDialog" Value="PuppetWelcomeDlg" Order="2"><![CDATA[Installed AND PATCH]]></Publish>
 
       <Publish Dialog="MaintenanceWelcomeDlg" Control="Next" Event="NewDialog" Value="MaintenanceTypeDlg">1</Publish>
 
